Refactor awards section: update award titles to links and adjust styles for consistency

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,9 +1,5 @@
-.awards {
-  margin-top: 1em;
-}
-
 .award-item {
-  margin-bottom: 1.2em;
+  margin-bottom: 1.1em;
 }
 
 .award-header {
@@ -12,27 +8,29 @@
   align-items: baseline;
 }
 
-.award-title {
-  font-weight: 600;
+.award-title a {
+  color: $link-color;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.award-title a:hover {
+  text-decoration: underline;
 }
 
 .award-meta {
   text-align: right;
+  white-space: nowrap;
   font-size: 0.9em;
   color: #555;
 }
 
 .award-rank {
-  color: #1a4fff;
+  color: $link-color;
   font-weight: 500;
-  margin: 0.2em 0 0.3em 0;
+  margin: 0.15em 0 0.25em 0;
 }
 
 .award-item ul {
-  margin-top: 0.2em;
-  margin-bottom: 0;
-}
-
-.award-item li {
-  margin-bottom: 0.2em;
+  margin-top: 0.15em;
 }
